--- a/evolution/neat-config.ini
+++ b/evolution/neat-config.ini
@@ -1,42 +1,54 @@
+#--- parameters for the XOR-2 experiment ---#
+
 [NEAT]
-fitness_criterion = min
-fitness_threshold = 200
-pop_size = 250
-reset_on_extinction = False
+fitness_criterion     = mean
+fitness_threshold     = 1500
+pop_size              = 250
+reset_on_extinction   = False
 
-[DefaultStagnation]
-species_fitness_func = max
-max_stagnation       = 20
-species_elitism      = 2
+[EWTGenome]
+# node activation options
+activation_default      = tanh
+activation_mutate_rate  = 0.0
+activation_options      = tanh
 
-[DefaultSpeciesSet]
-compatibility_threshold = 3.0
-
-[DefaultReproduction]
-elitism            = 0
-survival_threshold = 0.2
-
-[DefaultGenome]
-activation_default = tanh
-activation_mutate_rate = 0.0
-activation_options = tanh
-aggregation_default = sum
+# node aggregation options
+aggregation_default     = sum
 aggregation_mutate_rate = 0.0
-aggregation_options = sum
-feed_forward = True
+aggregation_options     = sum
 
-bias_init_mean = 0.0
-bias_init_stdev = 0.1
+# node bias options
+bias_init_mean          = 0.0
+bias_init_stdev         = 1.0
+bias_max_value          = 30.0
+bias_min_value          = -30.0
+bias_mutate_power       = 0.5
+bias_mutate_rate        = 0.7
+bias_replace_rate       = 0.1
 
-conn_add_prob = 0.2
-conn_delete_prob = 0.2
-node_add_prob = 0.0
-node_delete_prob = 0.0
-enabled_mutate_rate = 0.02
+# genome compatibility options
+compatibility_disjoint_coefficient = 0.0
+compatibility_weight_coefficient   = 0.0
 
-num_inputs = 10
-num_hidden = 0
-num_outputs = 2
+# connection add/remove rates
+conn_add_prob           = 0.5
+conn_delete_prob        = 0.5
+
+# connection enable options
+enabled_default         = True
+enabled_mutate_rate     = 0.01
+
+feed_forward            = True
+initial_connection      = full
+
+# node add/remove rates
+node_add_prob           = 0.0
+node_delete_prob        = 0.0
+
+# network parameters
+num_hidden              = 0
+num_inputs              = 10
+num_outputs             = 2
 
 # node response options
 response_init_mean      = 1.0
@@ -50,9 +62,37 @@ response_replace_rate   = 0.0
 # connection weight options
 weight_init_mean        = 0.0
 weight_init_stdev       = 1.0
-weight_max_value        = 30
-weight_min_value        = -30
+weight_max_value        = 1.0
+weight_min_value        = -1.0
 weight_mutate_power     = 0.5
 weight_mutate_rate      = 0.8
 weight_replace_rate     = 0.1
 
+
+learning_rate_init = -3.0
+learning_rate_init_stdev = 1.0
+learning_rate_min_value = -12.0
+learning_rate_max_value = 0.0
+learning_rate_mutate_power = 0.25
+learning_rate_mutate_rate = 0.05
+learning_rate_replace_rate = 0.01
+
+layer_transfer_decay_init = -3.0
+layer_transfer_decay_init_stdev = 1.0
+layer_transfer_decay_min_value = -12.0
+layer_transfer_decay_max_value = 0.0
+layer_transfer_decay_mutate_power = 0.25
+layer_transfer_decay_mutate_rate = 0.05
+layer_transfer_decay_replace_rate = 0.01
+
+[DefaultSpeciesSet]
+compatibility_threshold = 3.0
+
+[DefaultStagnation]
+species_fitness_func = max
+max_stagnation       = 2000
+species_elitism      = 0
+
+[DefaultReproduction]
+elitism            = 0
+survival_threshold = 0.2
