--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,13 @@
+cycler==0.10.0
+graphviz==0.8
+matplotlib==2.0.2
 neat-python==0.91
 numpy==1.13.1
 olefile==0.44
 Pillow==4.2.1
 pygame==1.9.3
+pyparsing==2.2.0
+python-dateutil==2.6.1
+pytz==2017.2
 scipy==0.19.1
+six==1.10.0
