--- a/evolution/neat-config.ini
+++ b/evolution/neat-config.ini
@@ -1,9 +1,9 @@
 #--- parameters for the XOR-2 experiment ---#
 
 [NEAT]
-fitness_criterion     = min
-fitness_threshold     = 60
-pop_size              = 16
+fitness_criterion     = mean
+fitness_threshold     = 600
+pop_size              = 125
 reset_on_extinction   = False
 
 [EWTGenome]
